feat: create main page

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RS Lang</title>
+  <link rel="icon" href="https://img.icons8.com/nolan/64/language.png">
 </head>
 
-<body id="root"></body>
-
+<body>
+  <main id="root">
+  </main>
+</body>
 </html>
