feat: apply eslint and refactor some code

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RS Lang</title>
   <link rel="icon" href="https://img.icons8.com/nolan/64/language.png">
+  <link rel="stylesheet" href="./assets/normalize.css">
 </head>
 
 <body>
   <main id="root">
   </main>
 </body>
+
 </html>
