--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RS Lang</title>
+    <link rel="icon" href="https://img.icons8.com/nolan/64/language.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RS Lang</title>
-  <link rel="icon" href="https://img.icons8.com/nolan/64/language.png">
-  <link rel="stylesheet" href="./assets/normalize.css">
-</head>
-
-<body>
-  <main id="root">
-  </main>
-</body>
-
+  <body>
+    <main id="root"></main>
+  </body>
 </html>
